2014-07-17  Will Newton  <will.newton@linaro.org>

	* iconv/loop.c: Move definition of LOOPFCT and gconv_btowc
	into an #else block.

2014-07-16  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/arm/preconfigure.ac: Apply EABI sanity check to arm*, not
	just Linux configurations.  Test empirically that the compiler sets
	__ARM_EABI__, rather than using the tuple to decide.
	* sysdeps/arm/preconfigure: Regenerated.
	* sysdeps/unix/sysv/linux/arm/configure: File removed.
	* sysdeps/unix/sysv/linux/arm/configure.ac: File removed,
	contents appended ...
	* sysdeps/arm/configure.ac: ... here.
	* sysdeps/arm/configure: Regenerated.

2014-07-15  Roland McGrath  <roland@hack.frob.com>

	* nptl/pthread_kill.c: New file.
	* nptl/pthread_sigmask.c: New file.
	* nptl/pthread_sigqueue.c: New file.

	* sysdeps/nptl/lowlevellock.h: New file.
	* sysdeps/unix/sysv/linux/lowlevellock-futex.h: New file.
	* sysdeps/nptl/lowlevellock-futex.h: New file.

	* nptl/pthreadP.h (__current_sigrtmin, __current_sigrtmax):
	Remove dead declarations.

2014-07-14  H.J. Lu  <hongjiu.lu@intel.com>

	* config.h.in (HAVE_AVX2_SUPPORT): New #undef.
	* sysdeps/i386/configure.ac: Set HAVE_AVX2_SUPPORT and
	config-cflags-avx2.
	* sysdeps/x86_64/configure.ac: Likewise.
	* sysdeps/i386/configure: Regenerated.
	* sysdeps/x86_64/configure: Likewise.
	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Add
	memset-avx2 only if config-cflags-avx2 is yes.
	* sysdeps/x86_64/multiarch/ifunc-impl-list.c (__libc_ifunc_impl_list):
	Tests for memset_chk and memset only if HAVE_AVX2_SUPPORT is
	defined.
	* sysdeps/x86_64/multiarch/memset.S: Define multiple versions
	only if HAVE_AVX2_SUPPORT is defined.
	* sysdeps/x86_64/multiarch/memset_chk.S: Likewise.

2014-07-14  Alan Modra  <amodra@gmail.com>

	[BZ #17153]
	* elf/elf.h (DT_PPC64_NUM): Correct value.
	* NEWS: Add to fixed bug list.

2014-07-13  Jim Meyering  <meyering@fb.com>

	[BZ 17150]
	regex: don't deref NULL upon heap allocation failure